# OpenGLEngine

./: .gitignore  CMakeLists.txt  README.md  glad.c  main.cpp
include/: stb_image.cpp
include/glad/: glad.h
shader/: DepthBufferDebug.glsl  fragment.frag  phong.glsl  phong_maps.glsl  vertex.glsl  vertex.vert
shader/common/: lighting.glsl  structures.glsl
src/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  HelperFunctions.h  InputManager.cpp  InputManager.h  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelImporter.cpp  ModelImporter.h  Primitive.cpp  Primitive.h  PrimitiveFactory.cpp  PrimitiveFactory.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  SceneBuilder.cpp  SceneBuilder.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  Transformable.h  Window.cpp  (+1 more)
src/entity/: Camera.cpp  Camera.h  Entity.h  Model.h
src/rendering/: Material.cpp  Material.h  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Skybox.h  Texture.cpp  Texture.h
src/scene/: ModelImporter.cpp  ModelImporter.h  PrimitiveFactory.cpp  PrimitiveFactory.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  SceneBuilder.cpp  SceneBuilder.h
